2.3 Released ??? 2014

* Add background image, which allow in particular semi-transparent background color.
* Add function Rasterize() and MGL command 'rasterize' to save current image as background.
* Add function LoadBackground() and MGL command 'background' to load image for background.
* Add primitives to draw polygon and angle arc.
* Greatly increase speed of formula parsing (i.e. of functions mglData::Modify(), mglData::Fill() and similar).
* Add arrow style 'X'
* Add manual dash style, like "{df090}"
* Add manual mask style, like "{s00ff00182424f800}"
* Add function "random(dat)" to the list of known functions for formula parsing
* Spline() now use 5-th order polynomials to keep continuity of 2nd derivative too.
* Function mgl_data_subdata_ext() handle NULL argument(s). Add variants of mglData::SubData() with 1 and 2 arguments.
* Use new s-hull version for triangulation.
* Warning messages and information are printed to stderr until call of mgl_suppress_warn(true) will disable it.

2.2.2.1 Released 19 March 2014

* Compatibility changes for MS VisualStudio 2010 and early.
* Function SetRange(v1,v2) ignore NAN values now.
* Add enable-json-sample for building json-samples on demand only.
* Update docs.


2.2.2 Released 10 March 2014

* Add mgl_region_3d() to draw region (or ribbon) between 2 curves. Correspondingly extend mglGraph::Region() function and MGL command 'region'.
* Allow LGPL for MathGL widgets.
* Improve export to TeX.
* Add missing functions to Fortran interface.
* Bugfix for legend with enabled lighting.
* Minor bugfixes and memory leaks.


2.2.1 Released 22 January 2014

* Add Qt5 support.
* Add Pascal interface.
* Improve JavaScript interface.
* Add function AddRange(char dir, mreal v1, mreal v2) and extend corresponding MGL commands '[xyzc]range'.
* Add 'hypot' function for known functions in formula parsing.
* Add style '~' to disable colorbar or axis labels. NOTE, axis style '_' is obsolete and should be replaced by '~'.